load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/sion/adapter/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/restful/cmds",
        "//app/domain/rental/biz",
        "//app/domain/rental/repo/asset/irent",
        "//entity/domain/rental/agg",
        "//entity/domain/rental/biz",
        "//entity/domain/rental/model",
        "//pkg/adapterx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/linebotx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_line_line_bot_sdk_go_v8//linebot",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
        "@com_github_line_line_bot_sdk_go_v8//linebot/webhook",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
