load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpheaders",
    srcs = ["middlewares.go"],
    importpath = "github.com/blackhorseya/irent/pkg/httpheaders",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkg/errorx",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
