load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fetchAvailableCars_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/sion/adapter/jobs/fetchAvailableCars",
    visibility = ["//visibility:private"],
    deps = [
        "//app/domain/rental/repo/asset/irent",
        "//entity/domain/rental/repo",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/logging",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "fetchAvailableCars",
    embed = [":fetchAvailableCars_lib"],
    visibility = ["//visibility:public"],
)
