load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rental_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/irent/cmd/cronjob/rental",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/config",
        "//internal/pkg/log",
        "//pkg/app",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "rental",
    embed = [":rental_lib"],
    visibility = ["//visibility:public"],
)
