load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cronjob_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/irent/cmd/rental/cronjob",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/config",
        "//internal/pkg/httpx",
        "//internal/pkg/log",
        "//pkg/adapters",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cronjob",
    embed = [":cronjob_lib"],
    visibility = ["//visibility:public"],
)
