load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "restful_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/irent/cmd/rental/restful",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapter/rental/restful",
        "//internal/app/domain/rental/biz",
        "//internal/app/domain/rental/biz/repo",
        "//internal/pkg/config",
        "//internal/pkg/httpx",
        "//internal/pkg/log",
        "//pkg/adapters",
        "//pkg/httpx",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "restful",
    embed = [":restful_lib"],
    visibility = ["//visibility:public"],
)
