load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = ["restful.go"],
    importpath = "github.com/blackhorseya/irent/internal/adapter/restful",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/entity/domain/account/biz",
        "//pkg/entity/domain/order/biz",
        "//pkg/entity/domain/rental/biz",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
