load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "asset.go",
        "mock_asset.go",
    ],
    importpath = "github.com/blackhorseya/sion/entity/domain/rental/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/rental/agg",
        "//pkg/contextx",
        "@org_uber_go_mock//gomock",
    ],
)
