load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/blackhorseya/irent/internal/adapter/account/restful/api",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/docs",
        "//internal/adapter/account/restful/api/v1:api",
        "//internal/pkg/errorx",
        "//pkg/contextx",
        "//pkg/entity/domain/account/biz",
        "//pkg/er",
        "//pkg/response",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
    embed = [":api"],
    deps = [
        "//pkg/contextx",
        "//pkg/entity/domain/account/biz",
        "//pkg/er",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_zap//:zap",
    ],
)
