load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/blackhorseya/irent/internal/adapter/order/restful/api",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/docs",
        "//internal/pkg/errorx",
        "//pkg/contextx",
        "//pkg/entity/domain/order/biz",
        "//pkg/response",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)
