load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cars",
    srcs = [
        "api.go",
        "get_list.go",
    ],
    importpath = "github.com/blackhorseya/irent/internal/adapter/restful/v1/cars",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/response",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
