load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "biz",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/irent/internal/app/domain/rental/biz",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app/domain/rental/biz/repo",
        "//internal/pkg/errorx",
        "//pkg/contextx",
        "//pkg/distance",
        "//pkg/entity/domain/rental/biz",
        "//pkg/entity/domain/rental/model",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "biz_test",
    srcs = ["impl_test.go"],
    embed = [":biz"],
    deps = [
        "//internal/app/domain/rental/biz/repo",
        "//pkg/contextx",
        "//pkg/entity/domain/rental/biz",
        "//pkg/entity/domain/rental/model",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_zap//:zap",
    ],
)
